fixed the login register vertical alignment

--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -1,4 +1,5 @@
 
 .content {
-  margin-top: 2%;
+  /* margin-top: 2%; */
+  min-height: 85vh;
 }
